# tarun-debug

./: .gitignore  BUILD  pants.toml  pyproject.toml
.github/workflows/: cicd.yml
projects/proj1/: BUILD
projects/proj1/proj1/: BUILD  settings.py  urls.py  wsgi.py
